# vnt-app

./: .gitignore  README.md  error_run21.txt
.github/workflows/: build-ios.yml
docs/: iOS_NETWORK_EXTENSION.md
ios/: Podfile
ios/PacketTunnelExtension/: Info.plist  PacketTunnelExtension.entitlements  PacketTunnelProvider.swift  SharedTunnelConfig.swift
ios/Runner/: AppDelegate.swift  Info.plist  Runner.entitlements  VPNManager.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/vnt/: vnt_manager.dart
rust/: Cargo.toml
rust/src/api/: vnt_api.rs
rust/vnt-fork/common/src/: identifier.rs
rust/vnt-fork/vnt-cli/src/: main.rs
rust/vnt-fork/vnt-cli/src/root_check/: mod.rs
rust/vnt-fork/vnt/src/: lib.rs
rust/vnt-fork/vnt/src/channel/socket/: unix.rs
rust/vnt-fork/vnt/src/core/: conn.rs  mod.rs
rust/vnt-fork/vnt/src/handle/: callback.rs  mod.rs
rust/vnt-fork/vnt/src/handle/recv_data/: server.rs
rust/vnt-fork/vnt/src/handle/tun_tap/: unix.rs
rust/vnt-fork/vnt/src/ip_proxy/: icmp_proxy.rs  mod.rs
rust/vnt-fork/vnt/src/tun_tap_device/: create_device.rs  mod.rs
rust/vnt-fork/vnt/tun/: Cargo.toml
rust/vnt-fork/vnt/tun/src/: lib.rs
rust/vnt-fork/vnt/tun/src/ios/: device.rs  mod.rs
rust/vnt-fork/vnt/tun/src/ios_stub/: device.rs  mod.rs
rust/vnt-fork/vnt/tun/src/unix/: mod.rs
