[package]
name = "rust_lib_vnt_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]

serde = { version = "1.0", features = ["derive"] }
flutter_rust_bridge = "=2.1.0"
vnt = { path = "vnt-fork/vnt", features = ["ring-cipher", "wss", "server_encrypt", "aes_gcm", "aes_cbc", "aes_ecb", "chacha20_poly1305", "ip_proxy", "port_mapping", "lz4_compress", "zstd_compress"] }
anyhow = "1.0.82"
tokio = { version = "1.37.0", features = ["full"] }

log = "0.4.17"
log4rs = "1.2.0"


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
